Fixing sidebar font issue on mobile

--- a/src/Sidebar/Sidebar.scss
+++ b/src/Sidebar/Sidebar.scss
@@ -53,20 +53,17 @@
     justify-content: start;
 
     #menu-collapse {
-        font-family: "Comic Sans MS", "Comic Sans", cursive;
+        font: 5vw/5vw "Reenie Beanie", sans-serif;
+        text-align: start;
+
         cursor: pointer;
         background-color: transparent;
         border: 0;
 
-        width: 10%;
-
         color: $primaryColor;
-        padding: 1vw;
-        font-size: 10vw;
+        font-size: 20vw;
+        line-height: 10vw;
         font-weight: bold;
-
-        transform-origin: 50% 50%;
-        transform: rotate(-20deg);
     }
 
     opacity: 0;
